<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginTop="30dp"
                android:text="@string/login_activity_title"
                android:textColor="@color/colorPrimary"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/login_activity_subtitle"
                android:textColor="@color/black" />

            <RelativeLayout
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="50dp"
                android:background="@android:color/transparent"
                android:padding="0dp">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:text="@string/username"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/username_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/username"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/edit_text_round_corner_frame"
                    android:drawableLeft="@drawable/user2"
                    android:drawablePadding="8dp"
                    android:hint="@string/username_enter_hint"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:paddingLeft="8dp"
                    android:singleLine="true"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/username_edit"
                    android:layout_marginTop="20dp"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/edit_text_round_corner_frame"
                    android:drawableLeft="@drawable/lock2"
                    android:drawablePadding="8dp"
                    android:hint="@string/password_enter_hint"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:paddingLeft="8dp"
                    android:singleLine="true"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password_edit"
                    android:layout_marginTop="10dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_below="@id/forget"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/button_click_effect"
                    android:text="@string/login_activity_title"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btn_login"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:id="@+id/dont_have_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dont_have_account"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/register_tv"
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_title"
                        android:textColor="@color/colorPrimary" />

                </LinearLayout>

                <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/spin_kit"
                    style="@style/SpinKitView.Large.Circle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/password_edit"
                    android:layout_centerHorizontal="true"
                    android:visibility="gone"
                    app:SpinKit_Color="@color/colorPrimary" />

                <View
                    android:id="@+id/loading_blocker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    android:clickable="true"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>

