<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ForgotPasswordActivity">

    <include
        android:id="@+id/navigation_bar"
        layout="@layout/navigationbar_layout"
        android:layout_marginLeft="0dp"
        android:layout_width="match_parent"
        android:layout_height="44dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/navigation_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginTop="30dp"
                android:text="@string/forgot_password_activity_title"
                android:textColor="@color/colorPrimary"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/forgot_password_activity_subtitle"
                android:textColor="@color/black" />

            <RelativeLayout
                android:id="@+id/submit_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@android:color/transparent"
                android:padding="0dp">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:text="@string/emailorphonenumber"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/username_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/username"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/edit_text_round_corner_frame"
                    android:drawableLeft="@drawable/user2"
                    android:drawablePadding="8dp"
                    android:hint="@string/enter_hint_emailorphonenumber"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:paddingLeft="8dp"
                    android:singleLine="true"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_below="@id/username_edit"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/button_click_effect"
                    android:text="@string/submit_btn_name"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <com.github.ybq.android.spinkit.SpinKitView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/spin_kit"
                    style="@style/SpinKitView.Large.Circle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignBottom="@id/username_edit"
                    app:SpinKit_Color="@color/colorPrimary"
                    android:visibility="gone"/>
                <View
                    android:id="@+id/loading_blocker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    android:clickable="true"
                    android:visibility="gone"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>

